--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,9 +6,10 @@
         <item name="windowNoTitle">true</item>
         <item name="android:windowFullscreen">true</item>
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowBackground">@color/darkBackground</item>
+        <item name="colorPrimary">@color/colorAccentCyan</item>
+        <item name="colorPrimaryDark">@color/darkBackground</item>
+        <item name="colorAccent">@color/colorAccentYellow</item>
     </style>
 
 </resources>
