--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -26,44 +26,60 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
                 android:textColor="@color/fontMemory"
                 android:textAlignment="center"
-                android:textSize="30sp"
+                android:textSize="25sp"
                 android:text="+"
-                android:clickable="true"/>
+                android:clickable="true"
+                android:ellipsize="end"
+                android:maxLines="1"/>
 
             <TextView
                 android:id="@+id/memory_1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
                 android:layout_weight="1"
                 android:textColor="@color/fontMemory"
                 android:textAlignment="center"
-                android:textSize="30sp"
+                android:textSize="25sp"
                 android:text="+"
-                android:clickable="true"/>
+                android:clickable="true"
+                android:ellipsize="end"
+                android:maxLines="1"/>
 
             <TextView
                 android:id="@+id/memory_2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
                 android:layout_weight="1"
                 android:textColor="@color/fontMemory"
                 android:textAlignment="center"
-                android:textSize="30sp"
+                android:textSize="25sp"
                 android:text="+"
-                android:clickable="true"/>
+                android:clickable="true"
+                android:ellipsize="end"
+                android:maxLines="1"/>
 
             <TextView
                 android:id="@+id/memory_3"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
                 android:layout_weight="1"
                 android:textColor="@color/fontMemory"
                 android:textAlignment="center"
-                android:textSize="30sp"
+                android:textSize="25sp"
                 android:text="+"
-                android:clickable="true"/>
+                android:clickable="true"
+                android:ellipsize="end"
+                android:maxLines="1"/>
 
         </LinearLayout>
 
@@ -76,7 +92,7 @@
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
-               android:layout_weight="2"
+               android:layout_weight="5"
                android:gravity="center"
                android:orientation="vertical">
 
@@ -88,7 +104,7 @@
                    android:text="0"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/resultColor"
-                   android:textSize="60sp"
+                   android:textSize="40sp"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />
 
                <TextView
@@ -99,7 +115,7 @@
                    android:paddingRight="30dp"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/lightGray"
-                   android:textSize="30sp"
+                   android:textSize="25sp"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />
            </LinearLayout>
 
@@ -107,7 +123,7 @@
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
-               android:layout_weight="3"
+               android:layout_weight="6"
                android:orientation="vertical">
 
                <!-- BRACKETS -->
@@ -151,8 +167,8 @@
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
-                   android:paddingTop="20dp"
-                   android:paddingBottom="20dp"
+                   android:paddingTop="10dp"
+                   android:paddingBottom="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal"
                    tools:ignore="NestedWeights">
